force-app/main/default/objects/LicenseSet__c/LicenseSet__c.object-meta.xml
<CustomObject>
    <label>LicenseSet</label>
    <nameField>
        <label>Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LicenseSets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>