force-app/main/default/objects/LicenseSet__c/fields/Admin_Text_Tag__c.field-meta.xml
<CustomField>
    <fullName>Admin_Text_Tag__c</fullName>
    <description>Admin field to trigger RolluponContract trigger to populate the rollup totals</description>
    <label>Admin Text Tag</label>
    <length>50</length>
    <type>Text</type>
</CustomField>