force-app/main/default/objects/LicenseSet__c/fields/AdminQCLineItemID__c.field-meta.xml
<CustomField>
    <fullName>AdminQCLineItemID__c</fullName>
    <description>If LicenseSet is created from Q/C migration, this is the ID it mapped from</description>
    <inlineHelpText>If LicenseSet is created from Q/C migration, this is the ID it mapped from</inlineHelpText>
    <label>Admin: Q/C Line Item ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>