force-app/main/default/objects/LicenseSet__c/fields/Commitment_Reoccurence__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Reoccurence__c</fullName>
    <label>Commitment Reoccurence</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>month</fullName>
            </value>
            <value>
                <fullName>quarter</fullName>
            </value>
            <value>
                <fullName>year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>