force-app/main/default/objects/LicenseSet__c/fields/Committed_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Committed_Minutes__c</fullName>
    <description>Committed number of minutes that the customer will use for this Audio Product, which is added to the Estimated Minutes for the total.</description>
    <inlineHelpText>Committed number of minutes that the customer will use for this Audio Product, which is added to the Estimated Minutes for the total.</inlineHelpText>
    <label>Committed Minutes</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>