force-app/main/default/objects/LicenseSet__c/fields/Committed_Rate__c.field-meta.xml
<CustomField>
    <fullName>Committed_Rate__c</fullName>
    <description>Committed rate that the customer will pay for this Audio Product&apos;s Minutes.</description>
    <inlineHelpText>Committed rate that the customer will pay for this Audio Product&apos;s Minutes.</inlineHelpText>
    <label>Committed Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>