force-app/main/default/objects/LicenseSet__c/fields/CompanyID__c.field-meta.xml
<CustomField>
    <fullName>CompanyID__c</fullName>
    <label>CompanyID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>