force-app/main/default/objects/LicenseSet__c/fields/Created_By_s_Profile_ID__c.field-meta.xml
<CustomField>
    <fullName>Created_By_s_Profile_ID__c</fullName>
    <formula>CreatedBy.Profile.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By&apos;s Profile ID</label>
    <type>Text</type>
</CustomField>