force-app/main/default/objects/LicenseSet__c/fields/Deal_Desk_Approved__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deal Desk Approved</label>
    <type>Checkbox</type>
</CustomField>