force-app/main/default/objects/LicenseSet__c/fields/Deal_Desk_Approved_Users__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Approved_Users__c</fullName>
    <label>Deal Desk Approved Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>