force-app/main/default/objects/LicenseSet__c/fields/Enterprise_Name__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offering</label>
    <referenceTo>Offerings__c</referenceTo>
    <relationshipLabel>LicenseSets</relationshipLabel>
    <relationshipName>LicenseSets1</relationshipName>
    <type>Lookup</type>
</CustomField>