force-app/main/default/objects/LicenseSet__c/fields/Estimated_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Minutes__c</fullName>
    <description>Estimated number of minutes that the customer will use for this Audio Product, which is added to the Committed Minutes for the total.</description>
    <inlineHelpText>Estimated number of minutes that the customer will use for this Audio Product, which is added to the Committed Minutes for the total.</inlineHelpText>
    <label>Estimated Minutes</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>