force-app/main/default/objects/LicenseSet__c/fields/Estimated_Rate__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Rate__c</fullName>
    <description>Estimated rate that the customer will pay for this Audio Product&#39;s Minutes.</description>
    <inlineHelpText>Estimated rate that the customer will pay for this Audio Product&#39;s Minutes.</inlineHelpText>
    <label>Estimated Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>