force-app/main/default/objects/LicenseSet__c/fields/HubID__c.field-meta.xml
<CustomField>
    <fullName>HubID__c</fullName>
    <label>HubID</label>
    <length>55</length>
    <type>Text</type>
</CustomField>