force-app/main/default/objects/LicenseSet__c/fields/Max_Term_After_Promo__c.field-meta.xml
<CustomField>
    <fullName>Max_Term_After_Promo__c</fullName>
    <formula>IF (Promotional_Terms_Months__c &gt; 0,Subscription_License_Term_Months__c  - Promotional_Terms_Months__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Term (After Promo)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>