force-app/main/default/objects/LicenseSet__c/fields/MRR__c.field-meta.xml
<CustomField>
    <fullName>MRR__c</fullName>
    <formula>IF ( NOT ( ISBLANK(Price__c)), 
IF( 
OR( 
Subscription_License_Term_Months__c = 0, 
ISPICKVAL( Billing_Frequency__c ,&apos;One Time Event&apos;)),0, 
IF( 
ISPICKVAL(Billing_Frequency__c,&apos;Annually&apos;),((Price__c* Number_of_Licensed_Named_Users__c )/ 12), 
IF( 
ISPICKVAL(Billing_Frequency__c,&apos;Quarterly&apos;), ((Price__c* Number_of_Licensed_Named_Users__c )/ 3) 
,Price__c* Number_of_Licensed_Named_Users__c 
))),

If ( 
Or ( 
Subscription_License_Term_Months__c = 0, 
ISPICKVAL(  Commitment_Reoccurence__c  ,&apos;month&apos;)),0, 
If ( 
ISPICKVAL(Commitment_Reoccurence__c ,&apos;year&apos;),(( Committed_Rate__c *  Committed_Minutes__c  )/ 12), 
If ( 
ISPICKVAL(Commitment_Reoccurence__c ,&apos;quarter&apos;), ((Committed_Rate__c *  Committed_Minutes__c  )/ 3) 
,Committed_Rate__c *  Committed_Minutes__c 
) 
)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>