force-app/main/default/objects/LicenseSet__c/fields/Number_of_Licensed_Named_Users__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Licensed_Named_Users__c</fullName>
    <label>Number of Licensed Named Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>