force-app/main/default/objects/LicenseSet__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>LicenseSets</relationshipLabel>
    <relationshipName>LicenseSets</relationshipName>
    <type>Lookup</type>
</CustomField>