force-app/main/default/objects/LicenseSet__c/fields/Oppty_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Oppty_Close_Date__c</fullName>
    <formula>Opportunity__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oppty Close Date</label>
    <type>Date</type>
</CustomField>