force-app/main/default/objects/LicenseSet__c/fields/Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan__c</fullName>
    <label>Payment Plan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>