force-app/main/default/objects/LicenseSet__c/fields/PGi_Contract__c.field-meta.xml
<CustomField>
    <fullName>PGi_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PGi Contract</label>
    <referenceTo>CONMAN_Contract__c</referenceTo>
    <relationshipLabel>LicenseSets</relationshipLabel>
    <relationshipName>LicenseSets</relationshipName>
    <type>Lookup</type>
</CustomField>