force-app/main/default/objects/LicenseSet__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>LicenseSets</relationshipLabel>
    <relationshipName>LicenseSets</relationshipName>
    <type>Lookup</type>
</CustomField>