force-app/main/default/objects/LicenseSet__c/fields/Promotional_Terms_Months__c.field-meta.xml
<CustomField>
    <fullName>Promotional_Terms_Months__c</fullName>
    <label>Promotional Terms (Months)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>