force-app/main/default/objects/LicenseSet__c/fields/Service_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Service_Minutes__c</fullName>
    <label>Service Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>