force-app/main/default/objects/LicenseSet__c/fields/Subscription_License_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Subscription_License_Term_Months__c</fullName>
    <label>Subscription License Term(Months)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>