force-app/main/default/objects/LicenseSet__c/fields/TCV__c.field-meta.xml
<CustomField>
    <fullName>TCV__c</fullName>
    <formula>IF ( NOT ( ISBLANK(Price__c)), 
IF(ISPICKVAL(Billing_Frequency__c,&apos;Monthly&apos;),Price__c*Number_of_Licensed_Named_Users__c *(Subscription_License_Term_Months__c- Promotional_Terms_Months__c ), 
IF(ISPICKVAL(Billing_Frequency__c,&apos;Quarterly&apos;),((Price__c* Number_of_Licensed_Named_Users__c )/3)* (Subscription_License_Term_Months__c- Promotional_Terms_Months__c ), 
IF(ISPICKVAL(Billing_Frequency__c,&apos;Annually&apos;),Price__c* Number_of_Licensed_Named_Users__c *( (Subscription_License_Term_Months__c- Promotional_Terms_Months__c)/12),Price__c*Number_of_Licensed_Named_Users__c 
))),

MRR__c  *  Subscription_License_Term_Months__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TCV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>