force-app/main/default/objects/LicenseSet__c/fields/TCV_Quantity__c.field-meta.xml
<CustomField>
    <fullName>TCV_Quantity__c</fullName>
    <label>TCV Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>