force-app/main/default/objects/LicenseSet__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <label>Unit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ancillaries</fullName>
            </value>
            <value>
                <fullName>Licenses</fullName>
            </value>
            <value>
                <fullName>Minutes</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>