force-app/main/default/objects/LicenseSet__c/fields/Z_Source__c.field-meta.xml
<CustomField>
    <fullName>Z_Source__c</fullName>
    <label>Z-Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>eCommerce</fullName>
            </value>
            <value>
                <fullName>Salesgateway</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>