force-app/main/default/objects/LicenseSet__c/fields/zAccount__c.field-meta.xml
<CustomField>
    <fullName>zAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>zAccount</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>LicenseSets</relationshipLabel>
    <relationshipName>LicenseSets1</relationshipName>
    <type>Lookup</type>
</CustomField>