force-app/main/default/objects/LicenseSet__c/validationRules/Inside_Sales_Users_BlueBird_products.validationRule-meta.xml
<ValidationRule>
    <fullName>Inside_Sales_Users_BlueBird_products</fullName>
    <active>true</active>
    <description>If not Inside Sales user, prevent user from adding product in the &quot;BlueBird&quot; family in iContract</description>
    <errorConditionFormula>AND(
    NOT(PGi_Contract__r.Opportunity__r.Owner.Inside_Sales_Staff__c),
    INCLUDES(Family__c,&quot;BlueBird&quot;)
)</errorConditionFormula>
    <errorMessage>Only Inside Sales users can add Offerings in &quot;BlueBird&quot; Product Family</errorMessage>
</ValidationRule>